# MvDA_Advancement

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: COLORFERET.md  FINDINGS.md
experiments/: _common.py  ablation_components.py  ablation_distance.py  ablation_scaler.py  ablation_solver.py  cross_validation.py  nifty50_sector.py  per_view_analysis.py  run_feret.py  run_mvda.py
notebooks/: colab_quickstart.ipynb
src/mvda/: __init__.py  classifiers.py  metrics.py  model.py  utils.py
src/mvda/datasets/: __init__.py  colorferet.py  multiple_features.py
tests/: test_metrics.py  test_model.py
