[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mvda"
version = "0.1.0"
description = "Multi-view Discriminant Analysis for multi-view classification (UCI Multiple Features, ColorFERET)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hemanth Vasudev N P" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
feret = ["pillow>=10.0", "gdown>=5.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
